website/websites/u64q/code/iobench.1.pyston.log

 Fri, 30 Oct 2020 19:19:31 GMT

COMMAND LINE:
 /usr/bin/pyston iobench.pyston 1

PROGRAM FAILED 


PROGRAM OUTPUT NOT CHECKED:

  File "iobench.pyston", line 6
    print func.__code__.co_name, "%d bytes, %.2fus per write" % (
          ^
SyntaxError: invalid syntax
